# soil_temperature_warning

./: .gitignore  Cargo.toml  README.md  shell.nix  soil_temp.py
src/: main.rs
